--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "csv": "^0.4.1",
     "express": "^4.12.3",
-    "mongoose": "^3.8.25"
+    "mongodb": "^2.0.23",
+    "mongoose": "^3.8.25",
+    "morgan": "^1.5.2"
   }
 }
