--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
   "dependencies": {
     "csv": "^0.4.1",
     "express": "^4.12.3",
-    "mongodb": "^2.0.23",
+    "jade": "^1.9.2",
     "mongoose": "^3.8.25",
     "morgan": "^1.5.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-jshint": "^1.9.4"
   }
 }
