--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.3",
-    "animate.css": "~3.2.6"
+    "animate.css": "~3.2.6",
+    "highcharts": "~4.1.4"
   }
 }
