--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/binoy14/IS219-Project1",
   "dependencies": {
+    "async": "^0.9.0",
     "csv": "^0.4.1",
     "csvtojson": "^0.3.19",
     "express": "^4.12.3",
